fix(Ajustes): Configs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kleydson-beckman.github.io/topFilmesSite",
+  "homepage": "https://kleydson-beckman.github.io/FilmesTopSite",
   "name": "top-filmes-site",
   "private": true,
   "version": "0.0.0",
